remove all about mCustomScrollbar; bookmarks menu animation fix;

--- a/src/common/styles/common.scss
+++ b/src/common/styles/common.scss
@@ -1183,7 +1183,7 @@ a {
   z-index: 1;
   cursor: default;
   transition: opacity 0.3s 0s ease;
-  will-change: opacity, transform;
+  will-change: opacity;
 
   &.active {
     visibility: visible;
